@@ -10,7 +10,6 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
 import java.util.Enumeration;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Vector;
 import java.util.jar.JarEntry;
@@ -27,26 +26,32 @@ import org.testng.collections.Lists;
  * @author <a href="mailto:cedric@beust.com">Cedric Beust</a>
  */
 public class PackageUtils {
-  private static String[] s_testClassPaths;
+  private static final String UTF_8 = "UTF-8";
+  private static final String PACKAGE_UTILS = PackageUtils.class.getSimpleName();
+  private static String[] testClassPaths;
 
   /** The additional class loaders to find classes in. */
-  private static final List<ClassLoader> m_classLoaders = new Vector<>();
+  private static final List<ClassLoader> classLoaders = new Vector<>();
+
+  private PackageUtils() {
+    //Utility class. Defeat instantiation.
+  }
 
   /** Add a class loader to the searchable loaders. */
   public static void addClassLoader(final ClassLoader loader) {
-    m_classLoaders.add(loader);
+    classLoaders.add(loader);
   }
 
   /**
    *
-   * @param packageName
-   * @return The list of all the classes inside this package
-   * @throws IOException
+   * @param packageName - The package name
+   * @param included - The inclusion list.
+   * @param excluded - The exclusion list
+   * @return - The list of all the classes inside this package
+   * @throws IOException - if there is an exception.
    */
-  public static String[] findClassesInPackage(String packageName,
-      List<String> included, List<String> excluded)
-    throws IOException
-  {
+  public static String[] findClassesInPackage(String packageName, List<String> included, List<String> excluded)
+    throws IOException {
     String packageOnly = packageName;
     boolean recursive = false;
     if (packageName.endsWith(".*")) {
@@ -58,20 +63,16 @@ public class PackageUtils {
     String packageDirName = packageOnly.replace('.', '/') + (packageOnly.length() > 0 ? "/" : "");
 
 
-    Vector<URL> dirs = new Vector<>();
+    List<URL> dirs = Lists.newArrayList();
     // go through additional class loaders
-    Vector<ClassLoader> allClassLoaders = new Vector<>();
+    List<ClassLoader> allClassLoaders = Lists.newArrayList();
     ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
     if (contextClassLoader != null) {
       allClassLoaders.add(contextClassLoader);
     }
-    if (m_classLoaders != null) {
-      allClassLoaders.addAll(m_classLoaders);
-    }
+    allClassLoaders.addAll(classLoaders);
 
-    int count = 0;
     for (ClassLoader classLoader : allClassLoaders) {
-      ++count;
       if (null == classLoader) {
         continue;
       }
@@ -82,21 +83,16 @@ public class PackageUtils {
       }
     }
 
-    Iterator<URL> dirIterator = dirs.iterator();
-    while (dirIterator.hasNext()) {
-      URL url = dirIterator.next();
+    for (URL url : dirs) {
       String protocol = url.getProtocol();
-      if(!matchTestClasspath(url, packageDirName, recursive)) {
+      if (! matchTestClasspath(url, packageDirName, recursive)) {
         continue;
       }
 
       if ("file".equals(protocol)) {
         findClassesInDirPackage(packageOnly, included, excluded,
-                                URLDecoder.decode(url.getFile(), "UTF-8"),
-                                recursive,
-                                vResult);
-      }
-      else if ("jar".equals(protocol)) {
+            URLDecoder.decode(url.getFile(), UTF_8), recursive, vResult);
+      } else if ("jar".equals(protocol)) {
         JarFile jar = ((JarURLConnection) url.openConnection()).getJarFile();
         Enumeration<JarEntry> entries = jar.entries();
         while (entries.hasMoreElements()) {
@@ -107,46 +103,43 @@ public class PackageUtils {
           }
           if (name.startsWith(packageDirName)) {
             int idx = name.lastIndexOf('/');
-            if (idx != -1) {
+            if (idx != - 1) {
               packageName = name.substring(0, idx).replace('/', '.');
             }
 
             if (recursive || packageName.equals(packageOnly)) {
               //it's not inside a deeper dir
-              Utils.log("PackageUtils", 4, "Package name is " + packageName);
-              if (name.endsWith(".class") && !entry.isDirectory()) {
+              Utils.log(PACKAGE_UTILS, 4, "Package name is " + packageName);
+              if (name.endsWith(".class") && ! entry.isDirectory()) {
                 String className = name.substring(packageName.length() + 1, name.length() - 6);
-                Utils.log("PackageUtils", 4, "Found class " + className + ", seeing it if it's included or excluded");
+                Utils.log(PACKAGE_UTILS, 4, "Found class " + className + ", seeing it if it's included or excluded");
                 includeOrExcludeClass(packageName, className, included, excluded, vResult);
               }
             }
           }
         }
-      }
-      else if ("bundleresource".equals(protocol)) {
+      } else if ("bundleresource".equals(protocol)) {
         try {
-          Class params[] = {};
+          Class[] params = {};
           // BundleURLConnection
           URLConnection connection = url.openConnection();
-          Method thisMethod = url.openConnection().getClass()
-              .getDeclaredMethod("getFileURL", params);
-          Object paramsObj[] = {};
+          Method thisMethod = url.openConnection().getClass().getDeclaredMethod("getFileURL", params);
+          Object[] paramsObj = {};
           URL fileUrl = (URL) thisMethod.invoke(connection, paramsObj);
           findClassesInDirPackage(packageOnly, included, excluded,
-              URLDecoder.decode(fileUrl.getFile(), "UTF-8"), recursive, vResult);
+              URLDecoder.decode(fileUrl.getFile(), UTF_8), recursive, vResult);
         } catch (Exception ex) {
           // ignore - probably not an Eclipse OSGi bundle
         }
       }
     }
 
-    String[] result = vResult.toArray(new String[vResult.size()]);
-    return result;
+    return vResult.toArray(new String[vResult.size()]);
   }
 
   private static String[] getTestClasspath() {
-    if (null != s_testClassPaths) {
-      return s_testClassPaths;
+    if (null != testClassPaths) {
+      return testClassPaths;
     }
 
     String testClasspath = System.getProperty(TestNG.TEST_CLASSPATH);
@@ -155,10 +148,10 @@ public class PackageUtils {
     }
 
     String[] classpathFragments= Utils.split(testClasspath, File.pathSeparator);
-    s_testClassPaths= new String[classpathFragments.length];
+    testClassPaths = new String[classpathFragments.length];
 
     for(int i= 0; i < classpathFragments.length; i++)  {
-      String path= null;
+      String path;
       if(classpathFragments[i].toLowerCase().endsWith(".jar") || classpathFragments[i].toLowerCase().endsWith(".zip")) {
         path= classpathFragments[i] + "!/";
       }
@@ -171,10 +164,10 @@ public class PackageUtils {
         }
       }
 
-      s_testClassPaths[i]= path.replace('\\', '/');
+      testClassPaths[i]= path.replace('\\', '/');
     }
 
-    return s_testClassPaths;
+    return testClassPaths;
   }
 
   private static boolean matchTestClasspath(URL url, String lastFragment, boolean recursive) {
@@ -183,9 +176,9 @@ public class PackageUtils {
       return true;
     }
 
-    String fileName= null;
+    String fileName= "";
     try {
-      fileName= URLDecoder.decode(url.getFile(), "UTF-8");
+      fileName= URLDecoder.decode(url.getFile(), UTF_8);
     }
     catch(UnsupportedEncodingException ueex) {
       // ignore. should never happen
@@ -228,7 +221,10 @@ public class PackageUtils {
           }
         });
 
-    Utils.log("PackageUtils", 4, "Looking for test classes in the directory: " + dir);
+    Utils.log(PACKAGE_UTILS, 4, "Looking for test classes in the directory: " + dir);
+    if (dirfiles == null) {
+      return;
+    }
     for (File file : dirfiles) {
       if (file.isDirectory()) {
         findClassesInDirPackage(makeFullClassName(packageName, file.getName()),
@@ -239,8 +235,8 @@ public class PackageUtils {
                                 classes);
       }
       else {
-        String className = file.getName().substring(0, file.getName().lastIndexOf("."));
-        Utils.log("PackageUtils", 4, "Found class " + className
+        String className = file.getName().substring(0, file.getName().lastIndexOf('.'));
+        Utils.log(PACKAGE_UTILS, 4, "Found class " + className
             + ", seeing it if it's included or excluded");
         includeOrExcludeClass(packageName, className, included, excluded, classes);
       }
@@ -255,11 +251,11 @@ public class PackageUtils {
       List<String> included, List<String> excluded, List<String> classes)
   {
     if (isIncluded(packageName, included, excluded)) {
-      Utils.log("PackageUtils", 4, "... Including class " + className);
+      Utils.log(PACKAGE_UTILS, 4, "... Including class " + className);
       classes.add(makeFullClassName(packageName, className));
     }
     else {
-      Utils.log("PackageUtils", 4, "... Excluding class " + className);
+      Utils.log(PACKAGE_UTILS, 4, "... Excluding class " + className);
     }
   }
 
@@ -269,12 +265,12 @@ public class PackageUtils {
   private static boolean isIncluded(String name,
       List<String> included, List<String> excluded)
   {
-    boolean result = false;
+    boolean result;
 
     //
     // If no includes nor excludes were specified, return true.
     //
-    if (included.size() == 0 && excluded.size() == 0) {
+    if (included.isEmpty() && excluded.isEmpty()) {
       result = true;
     }
     else {
@@ -287,7 +283,7 @@ public class PackageUtils {
         result = false;
       }
       else {
-        result = included.size() == 0;
+        result = included.isEmpty();
       }
     }
     return result;
